# multi-agentes

./: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  agente.sh  docker-compose.yml  menu.py  token_tracker.py
api/: main.py
code-review-bot/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
code-review-bot/.github/workflows/: ci.yml
code-review-bot/src/: agents.py  crew_runner.py  main.py  tasks.py
code-review-bot/src/code_review_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
code-review-bot/src/tools/: code_reader.py  reporter.py
code-review-bot/tests/: conftest.py  test_tools.py
consultor-bot/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
consultor-bot/  my-project  /: README.md  package.json
consultor-bot/  my-project  /src/app/: layout.tsx  page.tsx
consultor-bot/!!!@@@###/: README.md  package.json
consultor-bot/!!!@@@###/src/app/: layout.tsx  page.tsx
consultor-bot/!!!Hola Mundo???/: README.md  package.json
consultor-bot/!!!Hola Mundo???/src/app/: layout.tsx  page.tsx
consultor-bot/.github/workflows/: ci.yml
consultor-bot/Proyecto ñoño 🚀/: README.md  package.json
consultor-bot/Proyecto ñoño 🚀/src/app/: layout.tsx  page.tsx
consultor-bot/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/: README.md  package.json
consultor-bot/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/src/app/: layout.tsx  page.tsx
consultor-bot/berry-harvest-tracker/: README.md  package.json
consultor-bot/berry-harvest-tracker/src/app/: layout.tsx  page.tsx
consultor-bot/cosecha-berry-pwa/: README.md  package.json
consultor-bot/cosecha-berry-pwa/src/app/: layout.tsx  page.tsx
consultor-bot/my-app/: README.md  package.json
consultor-bot/my-app/src/app/: layout.tsx  page.tsx
consultor-bot/src/: agents.py  crew_runner.py  main.py  tasks.py
consultor-bot/src/tools/: project_tools.py
consultor-bot/test-proj/: requirements.txt
consultor-bot/test-proj/app/: main.py
consultor-bot/test-proj/app/core/: config.py
consultor-bot/tests/: conftest.py  test_tools.py
consultor-bot/unique-dup-test/: README.md  package.json
consultor-bot/unique-dup-test/src/app/: layout.tsx  page.tsx
consultor-outside-test/: README.md  package.json
consultor-outside-test/src/app/: layout.tsx  page.tsx
evil/: README.md  package.json
evil/src/app/: layout.tsx  page.tsx
it-support-bot/: .env.example  README.md  pyproject.toml  requirements.txt
it-support-bot/.github/workflows/: ci.yml
it-support-bot/src/: agents.py  crew_runner.py  main.py  tasks.py
it-support-bot/src/tools/: report_generator.py  web_search.py
it-support-bot/tests/: conftest.py  test_tools.py
