[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "code-review-bot"
version = "1.0.0"
description = "Code Review Bot — Revisión multi-agente de código fuente con CrewAI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Noull999"},
]
keywords = ["code-review", "crewai", "multi-agent", "automation", "static-analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Quality Assurance",
    "Intended Audience :: Developers",
]

dependencies = [
    "crewai>=1.14.0",
    "litellm>=1.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Noull999/multi-agentes-code-review-bot"
Repository = "https://github.com/Noull999/multi-agentes-code-review-bot"
Documentation = "https://github.com/Noull999/multi-agentes-code-review-bot#readme"

[project.scripts]
code-review-bot = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["code_review_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
