[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "consultor-bot"
version = "1.0.0"
description = "Consultor Full-Stack Automatizado — De la conversación al código con CrewAI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Noull999"},
]
keywords = ["consulting", "crewai", "multi-agent", "automation", "proposal", "scaffolding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Enterprise",
    "Intended Audience :: Developers",
    "Intended Audience :: Customer Service",
]

dependencies = [
    "crewai>=1.14.0",
    "litellm>=1.54.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Noull999/multi-agentes-consultor-bot"
Repository = "https://github.com/Noull999/multi-agentes-consultor-bot"
Documentation = "https://github.com/Noull999/multi-agentes-consultor-bot#readme"

[project.scripts]
consultor-bot = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
