[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "it-support-bot"
version = "1.0.0"
description = "IT Support Auto-Pilot — Diagnóstico y resolución multi-agente con CrewAI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nous Research"},
]
keywords = ["it-support", "crewai", "multi-agent", "automation", "helpdesk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Enterprise",
    "Topic :: System :: Systems Administration",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Customer Service",
]

dependencies = [
    "crewai>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/nousresearch/it-support-bot"
Repository = "https://github.com/nousresearch/it-support-bot"
Documentation = "https://github.com/nousresearch/it-support-bot#readme"

[project.scripts]
it-support-bot = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["it_support_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
